<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="10dp"
    android:orientation="vertical"
    tools:context=".screens.ShowRtcDetailsBYOwnerName">

    <TextView
        android:id="@+id/fieldReport"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/owner_details_heading"
        android:textColor="@color/MAROON"
        android:textSize="18sp"
        android:textStyle="bold" />


        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fadingEdgeLength="0dp"
            android:fillViewport="true"
            android:overScrollMode="never"
            android:layout_marginTop="20dp"
            android:scrollbars="none">


                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:background="@android:color/white"
                    android:padding="8dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight=".3"
                        android:text="@string/Survey_No"
                        android:textColor="@android:color/black" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight=".3"
                        android:text="@string/surnoc_no"
                        android:textColor="@android:color/black" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight=".3"
                        android:text="@string/hissa"
                        android:textColor="@android:color/black" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight=".3"
                        android:text="@string/owner_name"
                        android:textColor="@android:color/black" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight=".3"
                        android:text="@string/action_text"
                        android:textColor="@android:color/black" />


                </TableRow>



        </HorizontalScrollView>

</LinearLayout>