<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        android:background="@drawable/shp">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:theme="@style/AppTheme.PopupOverlay"
            app:title="@string/toolbartitle"
            app:titleTextColor="@color/toolbartitle">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <TextView
                    android:id="@+id/tvSetTite"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/bhoomi"
                    android:textColor="#fff"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="55dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:orientation="vertical"
        tools:context=".screens.RtcDetails"
        tools:showIn="@layout/activity_view_rtc_information">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ProgressBar
                android:id="@+id/progress_circular"
                style="@android:style/Widget.ProgressBar.Inverse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:visibility="gone" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:paddingBottom="10dp"
                android:background="@drawable/linear_layout_boarder"
                android:orientation="vertical"
                tools:context=".screens.ViewRtcInformation"
                tools:showIn="@layout/activity_view_rtc_information">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="24dp"
                    android:background="@color/mild_green"
                    android:padding="8dp"
                    android:text="@string/know_your_land_id"
                    android:textAlignment="center"
                    android:textColor="@android:color/white"
                    android:textSize="24sp" />

                <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
                    android:id="@+id/sp_landid_district"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:hint="@string/district"
                    android:textColorHint="@color/hint_before_float_rtc"
                    app:met_floatingLabel="normal"
                    app:met_floatingLabelTextColor="@color/hint_rtc" />

                <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
                    android:id="@+id/sp_landid_taluk"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:hint="@string/taluk"
                    android:textColorHint="@color/hint_before_float_rtc"
                    app:met_floatingLabel="normal"
                    app:met_floatingLabelTextColor="@color/hint_rtc" />

                <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
                    android:id="@+id/sp_landid_hobli"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:hint="@string/hobli"
                    android:textColorHint="@color/hint_before_float_rtc"
                    app:met_floatingLabel="normal"
                    app:met_floatingLabelTextColor="@color/hint_rtc" />

                <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
                    android:id="@+id/sp_landid_village"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:hint="@string/village"
                    android:textColorHint="@color/hint_before_float_rtc"
                    app:met_floatingLabel="normal"
                    app:met_floatingLabelTextColor="@color/hint_rtc" />



                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp">

                    <EditText
                        android:id="@+id/et_landid_surveyno"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/survey_background"
                        android:hint="@string/survey_no"
                        android:imeOptions="actionDone"
                        android:inputType="number"
                        android:maxLines="1"
                        android:maxLength="10"
                        android:textColorHint="@color/hint_before_float_rtc"
                        android:autofillHints="@string/survey_no" />
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/btn_landid_go"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="24dp"
                    android:layout_marginBottom="8dp"
                    android:background="@color/btn_background_blue"
                    android:text="@string/btnGo"
                    android:textColor="@android:color/white" />

                <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
                    android:id="@+id/sp_surnc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:hint="@string/surnoc_no"
                    android:textColorHint="@color/hint_before_float_rtc"
                    app:met_floatingLabel="normal"
                    app:met_floatingLabelTextColor="@color/hint_rtc" />

                <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
                    android:id="@+id/sp_landid_hissa"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:hint="@string/hissa"
                    android:textColorHint="@color/hint_before_float_rtc"
                    app:met_floatingLabel="normal"
                    app:met_floatingLabelTextColor="@color/hint_rtc" />



                <Button
                    android:id="@+id/btn_landid_fetch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="24dp"
                    android:layout_marginBottom="8dp"
                    android:background="@color/btn_background_blue"
                    android:text="@string/btnfetch"
                    android:textColor="@android:color/white" />

            </LinearLayout>

        </RelativeLayout>

    </ScrollView>

</androidx.cardview.widget.CardView>

